minor fix for overlapping issue with (+) add-comment div and compose box

--- a/atom/styles/stream.less
+++ b/atom/styles/stream.less
@@ -56,7 +56,7 @@
 			bottom: 0px;
 			padding: 10px;
 			box-sizing: border-box;
-			z-index: 12;
+			z-index: 5;
 
 			#input-div {
 				box-sizing: border-box;
